# photo-tooter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/photo_tooter/: cli.py  metadata.py
tests/: test_import.py
